// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PersistentStorageDropdown /> when persistent storage list needs to be fetched renders correctly 1`] = `
<PersistentStorageDropdown
  cluster={
    Object {
      "activity_timestamp": "2021-01-11T11:55:29Z",
      "addons": Object {
        "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/addons",
        "kind": "AddOnInstallationListLink",
      },
      "api": Object {
        "listening": "external",
        "url": "https://api.test-liza.wiex.s1.devshift.org:6443",
      },
      "aws_infrastructure_access_role_grants": Object {
        "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/aws_infrastructure_access_role_grants",
        "items": null,
        "kind": "AWSInfrastructureAccessRoleGrantLink",
      },
      "byoc": false,
      "ccs": Object {
        "disable_scp_checks": false,
        "enabled": false,
      },
      "cloud_provider": Object {
        "href": "/api/clusters_mgmt/v1/cloud_providers/aws",
        "id": "aws",
        "kind": "CloudProviderLink",
      },
      "console": Object {
        "url": "https://console-openshift-console.apps.test-liza.wiex.s1.devshift.org",
      },
      "creation_timestamp": "2021-01-10T15:17:16.278663Z",
      "display_name": "test-liza",
      "dns": Object {
        "base_domain": "wiex.s1.devshift.org",
      },
      "etcd_encryption": false,
      "expiration_timestamp": "2021-01-12T03:17:14.999204Z",
      "external_configuration": Object {
        "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/external_configuration",
        "kind": "ExternalConfiguration",
        "labels": Object {
          "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/external_configuration/labels",
          "kind": "LabelListLink",
        },
        "syncsets": Object {
          "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/external_configuration/syncsets",
          "kind": "SyncsetListLink",
        },
      },
      "external_id": "bae5b227-2472-4e71-be4d-a18fc60bb48a",
      "flavour": Object {
        "href": "/api/clusters_mgmt/v1/flavours/osd-4",
        "id": "osd-4",
        "kind": "FlavourLink",
      },
      "groups": Object {
        "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/groups",
        "kind": "GroupListLink",
      },
      "health_state": "healthy",
      "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq",
      "id": "1i4counta3holamvo1g5tp6n8p3a03bq",
      "identity_providers": Object {
        "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/identity_providers",
        "kind": "IdentityProviderListLink",
      },
      "infra_id": "test-liza-d7vkd",
      "ingresses": Object {
        "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/ingresses",
        "id": "1i4counta3holamvo1g5tp6n8p3a03bq",
        "kind": "IngressListLink",
      },
      "kind": "Cluster",
      "load_balancer_quota": 0,
      "machine_pools": Object {
        "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/machine_pools",
        "kind": "MachinePoolListLink",
      },
      "managed": true,
      "metrics": Object {
        "compute_nodes_cpu": Object {
          "total": Object {
            "unit": "",
            "value": 16,
          },
        },
        "compute_nodes_memory": Object {
          "total": Object {
            "unit": "B",
            "value": 65835802624,
          },
        },
        "compute_nodes_sockets": Object {
          "total": Object {
            "unit": "",
            "value": 0,
          },
        },
        "cpu": Object {
          "total": Object {
            "unit": "",
            "value": 36,
          },
          "updated_timestamp": "2021-01-11T11:55:29Z",
          "used": Object {
            "unit": "",
            "value": 3.8904761904758463,
          },
        },
        "memory": Object {
          "total": Object {
            "unit": "B",
            "value": 147469647872,
          },
          "updated_timestamp": "2021-01-11T11:55:29Z",
          "used": Object {
            "unit": "B",
            "value": 28802600960,
          },
        },
        "nodes": Object {
          "compute": 4,
          "infra": 2,
          "master": 3,
          "total": 9,
        },
        "sockets": Object {
          "total": Object {
            "unit": "",
            "value": 0,
          },
          "used": Object {
            "unit": "",
            "value": 0,
          },
        },
        "storage": Object {
          "total": Object {
            "unit": "B",
            "value": 0,
          },
          "used": Object {
            "unit": "B",
            "value": 0,
          },
        },
        "upgrade": Object {
          "available": false,
          "updated_timestamp": "2021-01-11T11:55:29Z",
        },
        "version_update_available": false,
      },
      "multi_az": false,
      "name": "test-liza",
      "network": Object {
        "host_prefix": 23,
        "machine_cidr": "10.0.0.0/16",
        "pod_cidr": "10.128.0.0/14",
        "service_cidr": "172.30.0.0/16",
      },
      "node_drain_grace_period": Object {
        "unit": "minutes",
        "value": 60,
      },
      "nodes": Object {
        "availability_zones": Array [
          "us-east-1a",
        ],
        "compute": 4,
        "compute_machine_type": Object {
          "href": "/api/clusters_mgmt/v1/machine_types/m5.xlarge",
          "id": "m5.xlarge",
          "kind": "MachineTypeLink",
        },
        "infra": 2,
        "master": 3,
        "master_machine_type": Object {
          "href": "/api/clusters_mgmt/v1/machine_types/m5.xlarge",
          "id": "m5.xlarge",
          "kind": "MachineTypeLink",
        },
      },
      "openshift_version": "4.6.8",
      "product": Object {
        "id": "OSD",
      },
      "region": Object {
        "href": "/api/clusters_mgmt/v1/cloud_providers/aws/regions/us-east-1",
        "id": "us-east-1",
        "kind": "CloudRegionLink",
      },
      "state": "ready",
      "status": Object {
        "dns_ready": true,
        "provision_error_code": "",
        "provision_error_message": "",
        "state": "ready",
      },
      "storage_quota": Object {
        "unit": "B",
        "value": 107374182400,
      },
      "subscription": Object {
        "capabilities": Array [
          Object {
            "inherited": true,
            "name": "capability.cluster.subscribed_ocp",
            "value": "true",
          },
          Object {
            "inherited": true,
            "name": "capability.cluster.manage_cluster_admin",
            "value": "true",
          },
        ],
        "cloud_provider_id": "aws",
        "cluster_id": "1i4counta3holamvo1g5tp6n8p3a03bq",
        "console_url": "https://console-openshift-console.apps.test-liza.wiex.s1.devshift.org",
        "cpu_total": 8,
        "created_at": "2021-01-10T15:17:15.19112Z",
        "creator": Object {
          "email": "***REMOVED***",
          "href": "/api/accounts_mgmt/v1/accounts/1MRilA9vHlOUX9ui3lx6IohSsaS",
          "id": "1MRilA9vHlOUX9ui3lx6IohSsaS",
          "kind": "Account",
          "name": "Liza Gilman",
          "username": "egilman.openshift",
        },
        "display_name": "test-liza",
        "external_cluster_id": "bae5b227-2472-4e71-be4d-a18fc60bb48a",
        "href": "/api/accounts_mgmt/v1/subscriptions/1msoogsgTLQ4PePjrTOt3UqvMzX",
        "id": "1msoogsgTLQ4PePjrTOt3UqvMzX",
        "kind": "Subscription",
        "last_reconcile_date": "0001-01-01T00:00:00Z",
        "last_released_at": "0001-01-01T00:00:00Z",
        "last_telemetry_date": "2021-01-11T03:59:48.224585Z",
        "managed": true,
        "metrics": Array [
          Object {
            "HealthState": "healthy",
            "cloud_provider": "aws",
            "compute_nodes_cpu": Object {
              "total": Object {
                "unit": "",
                "value": 24,
              },
              "updated_timestamp": "1970-01-01T00:00:00Z",
              "used": Object {
                "unit": "",
                "value": 0,
              },
            },
            "compute_nodes_memory": Object {
              "total": Object {
                "unit": "B",
                "value": 98489344000,
              },
              "updated_timestamp": "1970-01-01T00:00:00Z",
              "used": Object {
                "unit": "B",
                "value": 0,
              },
            },
            "compute_nodes_sockets": Object {
              "total": Object {
                "unit": "",
                "value": 0,
              },
              "updated_timestamp": "1970-01-01T00:00:00Z",
              "used": Object {
                "unit": "",
                "value": 0,
              },
            },
            "console_url": "https://console-openshift-console.apps.test-liza.wiex.s1.devshift.org",
            "cpu": Object {
              "total": Object {
                "unit": "",
                "value": 36,
              },
              "updated_timestamp": "2021-01-11T11:55:10.517Z",
              "used": Object {
                "unit": "",
                "value": 3.8904761904758463,
              },
            },
            "critical_alerts_firing": 0,
            "memory": Object {
              "total": Object {
                "unit": "B",
                "value": 147469647872,
              },
              "updated_timestamp": "2021-01-11T11:55:10.448Z",
              "used": Object {
                "unit": "B",
                "value": 28802600960,
              },
            },
            "nodes": Object {
              "compute": 4,
              "infra": 2,
              "master": 3,
              "total": 9,
            },
            "open_shift_version": "4.6.8",
            "operating_system": "",
            "operators_condition_failing": 0,
            "region": "us-east-1",
            "sockets": Object {
              "total": Object {
                "unit": "",
                "value": 0,
              },
              "updated_timestamp": "1970-01-01T00:00:00Z",
              "used": Object {
                "unit": "",
                "value": 0,
              },
            },
            "state": "ready",
            "state_description": "",
            "storage": Object {
              "total": Object {
                "unit": "B",
                "value": 0,
              },
              "updated_timestamp": "1970-01-01T00:00:00Z",
              "used": Object {
                "unit": "B",
                "value": 0,
              },
            },
            "subscription_cpu_total": 8,
            "subscription_socket_total": 4,
            "upgrade": Object {
              "updated_timestamp": "2021-01-11T11:55:10.206Z",
            },
          },
        ],
        "organization_id": "1MKVU4otCIuogoLtgtyU6wajxjW",
        "plan": Object {
          "href": "/api/accounts_mgmt/v1/plans/OSD",
          "id": "OSD",
          "kind": "Plan",
        },
        "provenance": "Provisioning",
        "region_id": "us-east-1",
        "socket_total": 4,
        "status": "Active",
        "support_level": "Premium",
        "updated_at": "2021-01-11T03:59:48.224622Z",
      },
      "upgrade_channel_group": "stable",
      "version": Object {
        "channel_group": "stable",
        "href": "/api/clusters_mgmt/v1/versions/openshift-v4.6.8",
        "id": "openshift-v4.6.8",
        "kind": "Version",
      },
    }
  }
  disabled={false}
  getPersistentStorage={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  input={
    Object {
      "onChange": [MockFunction],
    }
  }
  persistentStorageValues={
    Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    }
  }
  quotaList={
    Object {
      "storageQuota": Object {
        "standard": Object {
          "OSD": Object {
            "aws": Object {
              "rhInfra": Object {
                "singleAZ": Object {
                  "gp2": 27000,
                },
              },
            },
          },
        },
      },
    }
  }
>
  <div
    className="spinner-fit-container"
  >
    <Spinner>
      <div
        className="ins-c-spinner"
        role="status"
      >
        <span
          className="pf-u-screen-reader"
        >
          Loading...
        </span>
      </div>
    </Spinner>
  </div>
  <div
    className="spinner-loading-text"
  >
    Loading persistent storage list...
  </div>
</PersistentStorageDropdown>
`;

exports[`<PersistentStorageDropdown /> when the request is pending renders correctly 1`] = `
<PersistentStorageDropdown
  cluster={
    Object {
      "activity_timestamp": "2021-01-11T11:55:29Z",
      "addons": Object {
        "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/addons",
        "kind": "AddOnInstallationListLink",
      },
      "api": Object {
        "listening": "external",
        "url": "https://api.test-liza.wiex.s1.devshift.org:6443",
      },
      "aws_infrastructure_access_role_grants": Object {
        "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/aws_infrastructure_access_role_grants",
        "items": null,
        "kind": "AWSInfrastructureAccessRoleGrantLink",
      },
      "byoc": false,
      "ccs": Object {
        "disable_scp_checks": false,
        "enabled": false,
      },
      "cloud_provider": Object {
        "href": "/api/clusters_mgmt/v1/cloud_providers/aws",
        "id": "aws",
        "kind": "CloudProviderLink",
      },
      "console": Object {
        "url": "https://console-openshift-console.apps.test-liza.wiex.s1.devshift.org",
      },
      "creation_timestamp": "2021-01-10T15:17:16.278663Z",
      "display_name": "test-liza",
      "dns": Object {
        "base_domain": "wiex.s1.devshift.org",
      },
      "etcd_encryption": false,
      "expiration_timestamp": "2021-01-12T03:17:14.999204Z",
      "external_configuration": Object {
        "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/external_configuration",
        "kind": "ExternalConfiguration",
        "labels": Object {
          "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/external_configuration/labels",
          "kind": "LabelListLink",
        },
        "syncsets": Object {
          "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/external_configuration/syncsets",
          "kind": "SyncsetListLink",
        },
      },
      "external_id": "bae5b227-2472-4e71-be4d-a18fc60bb48a",
      "flavour": Object {
        "href": "/api/clusters_mgmt/v1/flavours/osd-4",
        "id": "osd-4",
        "kind": "FlavourLink",
      },
      "groups": Object {
        "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/groups",
        "kind": "GroupListLink",
      },
      "health_state": "healthy",
      "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq",
      "id": "1i4counta3holamvo1g5tp6n8p3a03bq",
      "identity_providers": Object {
        "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/identity_providers",
        "kind": "IdentityProviderListLink",
      },
      "infra_id": "test-liza-d7vkd",
      "ingresses": Object {
        "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/ingresses",
        "id": "1i4counta3holamvo1g5tp6n8p3a03bq",
        "kind": "IngressListLink",
      },
      "kind": "Cluster",
      "load_balancer_quota": 0,
      "machine_pools": Object {
        "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/machine_pools",
        "kind": "MachinePoolListLink",
      },
      "managed": true,
      "metrics": Object {
        "compute_nodes_cpu": Object {
          "total": Object {
            "unit": "",
            "value": 16,
          },
        },
        "compute_nodes_memory": Object {
          "total": Object {
            "unit": "B",
            "value": 65835802624,
          },
        },
        "compute_nodes_sockets": Object {
          "total": Object {
            "unit": "",
            "value": 0,
          },
        },
        "cpu": Object {
          "total": Object {
            "unit": "",
            "value": 36,
          },
          "updated_timestamp": "2021-01-11T11:55:29Z",
          "used": Object {
            "unit": "",
            "value": 3.8904761904758463,
          },
        },
        "memory": Object {
          "total": Object {
            "unit": "B",
            "value": 147469647872,
          },
          "updated_timestamp": "2021-01-11T11:55:29Z",
          "used": Object {
            "unit": "B",
            "value": 28802600960,
          },
        },
        "nodes": Object {
          "compute": 4,
          "infra": 2,
          "master": 3,
          "total": 9,
        },
        "sockets": Object {
          "total": Object {
            "unit": "",
            "value": 0,
          },
          "used": Object {
            "unit": "",
            "value": 0,
          },
        },
        "storage": Object {
          "total": Object {
            "unit": "B",
            "value": 0,
          },
          "used": Object {
            "unit": "B",
            "value": 0,
          },
        },
        "upgrade": Object {
          "available": false,
          "updated_timestamp": "2021-01-11T11:55:29Z",
        },
        "version_update_available": false,
      },
      "multi_az": false,
      "name": "test-liza",
      "network": Object {
        "host_prefix": 23,
        "machine_cidr": "10.0.0.0/16",
        "pod_cidr": "10.128.0.0/14",
        "service_cidr": "172.30.0.0/16",
      },
      "node_drain_grace_period": Object {
        "unit": "minutes",
        "value": 60,
      },
      "nodes": Object {
        "availability_zones": Array [
          "us-east-1a",
        ],
        "compute": 4,
        "compute_machine_type": Object {
          "href": "/api/clusters_mgmt/v1/machine_types/m5.xlarge",
          "id": "m5.xlarge",
          "kind": "MachineTypeLink",
        },
        "infra": 2,
        "master": 3,
        "master_machine_type": Object {
          "href": "/api/clusters_mgmt/v1/machine_types/m5.xlarge",
          "id": "m5.xlarge",
          "kind": "MachineTypeLink",
        },
      },
      "openshift_version": "4.6.8",
      "product": Object {
        "id": "OSD",
      },
      "region": Object {
        "href": "/api/clusters_mgmt/v1/cloud_providers/aws/regions/us-east-1",
        "id": "us-east-1",
        "kind": "CloudRegionLink",
      },
      "state": "ready",
      "status": Object {
        "dns_ready": true,
        "provision_error_code": "",
        "provision_error_message": "",
        "state": "ready",
      },
      "storage_quota": Object {
        "unit": "B",
        "value": 107374182400,
      },
      "subscription": Object {
        "capabilities": Array [
          Object {
            "inherited": true,
            "name": "capability.cluster.subscribed_ocp",
            "value": "true",
          },
          Object {
            "inherited": true,
            "name": "capability.cluster.manage_cluster_admin",
            "value": "true",
          },
        ],
        "cloud_provider_id": "aws",
        "cluster_id": "1i4counta3holamvo1g5tp6n8p3a03bq",
        "console_url": "https://console-openshift-console.apps.test-liza.wiex.s1.devshift.org",
        "cpu_total": 8,
        "created_at": "2021-01-10T15:17:15.19112Z",
        "creator": Object {
          "email": "***REMOVED***",
          "href": "/api/accounts_mgmt/v1/accounts/1MRilA9vHlOUX9ui3lx6IohSsaS",
          "id": "1MRilA9vHlOUX9ui3lx6IohSsaS",
          "kind": "Account",
          "name": "Liza Gilman",
          "username": "egilman.openshift",
        },
        "display_name": "test-liza",
        "external_cluster_id": "bae5b227-2472-4e71-be4d-a18fc60bb48a",
        "href": "/api/accounts_mgmt/v1/subscriptions/1msoogsgTLQ4PePjrTOt3UqvMzX",
        "id": "1msoogsgTLQ4PePjrTOt3UqvMzX",
        "kind": "Subscription",
        "last_reconcile_date": "0001-01-01T00:00:00Z",
        "last_released_at": "0001-01-01T00:00:00Z",
        "last_telemetry_date": "2021-01-11T03:59:48.224585Z",
        "managed": true,
        "metrics": Array [
          Object {
            "HealthState": "healthy",
            "cloud_provider": "aws",
            "compute_nodes_cpu": Object {
              "total": Object {
                "unit": "",
                "value": 24,
              },
              "updated_timestamp": "1970-01-01T00:00:00Z",
              "used": Object {
                "unit": "",
                "value": 0,
              },
            },
            "compute_nodes_memory": Object {
              "total": Object {
                "unit": "B",
                "value": 98489344000,
              },
              "updated_timestamp": "1970-01-01T00:00:00Z",
              "used": Object {
                "unit": "B",
                "value": 0,
              },
            },
            "compute_nodes_sockets": Object {
              "total": Object {
                "unit": "",
                "value": 0,
              },
              "updated_timestamp": "1970-01-01T00:00:00Z",
              "used": Object {
                "unit": "",
                "value": 0,
              },
            },
            "console_url": "https://console-openshift-console.apps.test-liza.wiex.s1.devshift.org",
            "cpu": Object {
              "total": Object {
                "unit": "",
                "value": 36,
              },
              "updated_timestamp": "2021-01-11T11:55:10.517Z",
              "used": Object {
                "unit": "",
                "value": 3.8904761904758463,
              },
            },
            "critical_alerts_firing": 0,
            "memory": Object {
              "total": Object {
                "unit": "B",
                "value": 147469647872,
              },
              "updated_timestamp": "2021-01-11T11:55:10.448Z",
              "used": Object {
                "unit": "B",
                "value": 28802600960,
              },
            },
            "nodes": Object {
              "compute": 4,
              "infra": 2,
              "master": 3,
              "total": 9,
            },
            "open_shift_version": "4.6.8",
            "operating_system": "",
            "operators_condition_failing": 0,
            "region": "us-east-1",
            "sockets": Object {
              "total": Object {
                "unit": "",
                "value": 0,
              },
              "updated_timestamp": "1970-01-01T00:00:00Z",
              "used": Object {
                "unit": "",
                "value": 0,
              },
            },
            "state": "ready",
            "state_description": "",
            "storage": Object {
              "total": Object {
                "unit": "B",
                "value": 0,
              },
              "updated_timestamp": "1970-01-01T00:00:00Z",
              "used": Object {
                "unit": "B",
                "value": 0,
              },
            },
            "subscription_cpu_total": 8,
            "subscription_socket_total": 4,
            "upgrade": Object {
              "updated_timestamp": "2021-01-11T11:55:10.206Z",
            },
          },
        ],
        "organization_id": "1MKVU4otCIuogoLtgtyU6wajxjW",
        "plan": Object {
          "href": "/api/accounts_mgmt/v1/plans/OSD",
          "id": "OSD",
          "kind": "Plan",
        },
        "provenance": "Provisioning",
        "region_id": "us-east-1",
        "socket_total": 4,
        "status": "Active",
        "support_level": "Premium",
        "updated_at": "2021-01-11T03:59:48.224622Z",
      },
      "upgrade_channel_group": "stable",
      "version": Object {
        "channel_group": "stable",
        "href": "/api/clusters_mgmt/v1/versions/openshift-v4.6.8",
        "id": "openshift-v4.6.8",
        "kind": "Version",
      },
    }
  }
  disabled={false}
  getPersistentStorage={[MockFunction]}
  input={
    Object {
      "onChange": [MockFunction],
    }
  }
  persistentStorageValues={
    Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": true,
      "values": Array [],
    }
  }
  quotaList={
    Object {
      "storageQuota": Object {
        "standard": Object {
          "OSD": Object {
            "aws": Object {
              "rhInfra": Object {
                "singleAZ": Object {
                  "gp2": 27000,
                },
              },
            },
          },
        },
      },
    }
  }
>
  <div
    className="spinner-fit-container"
  >
    <Spinner>
      <div
        className="ins-c-spinner"
        role="status"
      >
        <span
          className="pf-u-screen-reader"
        >
          Loading...
        </span>
      </div>
    </Spinner>
  </div>
  <div
    className="spinner-loading-text"
  >
    Loading persistent storage list...
  </div>
</PersistentStorageDropdown>
`;

exports[`<PersistentStorageDropdown /> when the storage list is available renders correctly 1`] = `
<PersistentStorageDropdown
  cluster={
    Object {
      "activity_timestamp": "2021-01-11T11:55:29Z",
      "addons": Object {
        "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/addons",
        "kind": "AddOnInstallationListLink",
      },
      "api": Object {
        "listening": "external",
        "url": "https://api.test-liza.wiex.s1.devshift.org:6443",
      },
      "aws_infrastructure_access_role_grants": Object {
        "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/aws_infrastructure_access_role_grants",
        "items": null,
        "kind": "AWSInfrastructureAccessRoleGrantLink",
      },
      "byoc": false,
      "ccs": Object {
        "disable_scp_checks": false,
        "enabled": false,
      },
      "cloud_provider": Object {
        "href": "/api/clusters_mgmt/v1/cloud_providers/aws",
        "id": "aws",
        "kind": "CloudProviderLink",
      },
      "console": Object {
        "url": "https://console-openshift-console.apps.test-liza.wiex.s1.devshift.org",
      },
      "creation_timestamp": "2021-01-10T15:17:16.278663Z",
      "display_name": "test-liza",
      "dns": Object {
        "base_domain": "wiex.s1.devshift.org",
      },
      "etcd_encryption": false,
      "expiration_timestamp": "2021-01-12T03:17:14.999204Z",
      "external_configuration": Object {
        "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/external_configuration",
        "kind": "ExternalConfiguration",
        "labels": Object {
          "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/external_configuration/labels",
          "kind": "LabelListLink",
        },
        "syncsets": Object {
          "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/external_configuration/syncsets",
          "kind": "SyncsetListLink",
        },
      },
      "external_id": "bae5b227-2472-4e71-be4d-a18fc60bb48a",
      "flavour": Object {
        "href": "/api/clusters_mgmt/v1/flavours/osd-4",
        "id": "osd-4",
        "kind": "FlavourLink",
      },
      "groups": Object {
        "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/groups",
        "kind": "GroupListLink",
      },
      "health_state": "healthy",
      "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq",
      "id": "1i4counta3holamvo1g5tp6n8p3a03bq",
      "identity_providers": Object {
        "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/identity_providers",
        "kind": "IdentityProviderListLink",
      },
      "infra_id": "test-liza-d7vkd",
      "ingresses": Object {
        "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/ingresses",
        "id": "1i4counta3holamvo1g5tp6n8p3a03bq",
        "kind": "IngressListLink",
      },
      "kind": "Cluster",
      "load_balancer_quota": 0,
      "machine_pools": Object {
        "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/machine_pools",
        "kind": "MachinePoolListLink",
      },
      "managed": true,
      "metrics": Object {
        "compute_nodes_cpu": Object {
          "total": Object {
            "unit": "",
            "value": 16,
          },
        },
        "compute_nodes_memory": Object {
          "total": Object {
            "unit": "B",
            "value": 65835802624,
          },
        },
        "compute_nodes_sockets": Object {
          "total": Object {
            "unit": "",
            "value": 0,
          },
        },
        "cpu": Object {
          "total": Object {
            "unit": "",
            "value": 36,
          },
          "updated_timestamp": "2021-01-11T11:55:29Z",
          "used": Object {
            "unit": "",
            "value": 3.8904761904758463,
          },
        },
        "memory": Object {
          "total": Object {
            "unit": "B",
            "value": 147469647872,
          },
          "updated_timestamp": "2021-01-11T11:55:29Z",
          "used": Object {
            "unit": "B",
            "value": 28802600960,
          },
        },
        "nodes": Object {
          "compute": 4,
          "infra": 2,
          "master": 3,
          "total": 9,
        },
        "sockets": Object {
          "total": Object {
            "unit": "",
            "value": 0,
          },
          "used": Object {
            "unit": "",
            "value": 0,
          },
        },
        "storage": Object {
          "total": Object {
            "unit": "B",
            "value": 0,
          },
          "used": Object {
            "unit": "B",
            "value": 0,
          },
        },
        "upgrade": Object {
          "available": false,
          "updated_timestamp": "2021-01-11T11:55:29Z",
        },
        "version_update_available": false,
      },
      "multi_az": false,
      "name": "test-liza",
      "network": Object {
        "host_prefix": 23,
        "machine_cidr": "10.0.0.0/16",
        "pod_cidr": "10.128.0.0/14",
        "service_cidr": "172.30.0.0/16",
      },
      "node_drain_grace_period": Object {
        "unit": "minutes",
        "value": 60,
      },
      "nodes": Object {
        "availability_zones": Array [
          "us-east-1a",
        ],
        "compute": 4,
        "compute_machine_type": Object {
          "href": "/api/clusters_mgmt/v1/machine_types/m5.xlarge",
          "id": "m5.xlarge",
          "kind": "MachineTypeLink",
        },
        "infra": 2,
        "master": 3,
        "master_machine_type": Object {
          "href": "/api/clusters_mgmt/v1/machine_types/m5.xlarge",
          "id": "m5.xlarge",
          "kind": "MachineTypeLink",
        },
      },
      "openshift_version": "4.6.8",
      "product": Object {
        "id": "OSD",
      },
      "region": Object {
        "href": "/api/clusters_mgmt/v1/cloud_providers/aws/regions/us-east-1",
        "id": "us-east-1",
        "kind": "CloudRegionLink",
      },
      "state": "ready",
      "status": Object {
        "dns_ready": true,
        "provision_error_code": "",
        "provision_error_message": "",
        "state": "ready",
      },
      "storage_quota": Object {
        "unit": "B",
        "value": 107374182400,
      },
      "subscription": Object {
        "capabilities": Array [
          Object {
            "inherited": true,
            "name": "capability.cluster.subscribed_ocp",
            "value": "true",
          },
          Object {
            "inherited": true,
            "name": "capability.cluster.manage_cluster_admin",
            "value": "true",
          },
        ],
        "cloud_provider_id": "aws",
        "cluster_id": "1i4counta3holamvo1g5tp6n8p3a03bq",
        "console_url": "https://console-openshift-console.apps.test-liza.wiex.s1.devshift.org",
        "cpu_total": 8,
        "created_at": "2021-01-10T15:17:15.19112Z",
        "creator": Object {
          "email": "***REMOVED***",
          "href": "/api/accounts_mgmt/v1/accounts/1MRilA9vHlOUX9ui3lx6IohSsaS",
          "id": "1MRilA9vHlOUX9ui3lx6IohSsaS",
          "kind": "Account",
          "name": "Liza Gilman",
          "username": "egilman.openshift",
        },
        "display_name": "test-liza",
        "external_cluster_id": "bae5b227-2472-4e71-be4d-a18fc60bb48a",
        "href": "/api/accounts_mgmt/v1/subscriptions/1msoogsgTLQ4PePjrTOt3UqvMzX",
        "id": "1msoogsgTLQ4PePjrTOt3UqvMzX",
        "kind": "Subscription",
        "last_reconcile_date": "0001-01-01T00:00:00Z",
        "last_released_at": "0001-01-01T00:00:00Z",
        "last_telemetry_date": "2021-01-11T03:59:48.224585Z",
        "managed": true,
        "metrics": Array [
          Object {
            "HealthState": "healthy",
            "cloud_provider": "aws",
            "compute_nodes_cpu": Object {
              "total": Object {
                "unit": "",
                "value": 24,
              },
              "updated_timestamp": "1970-01-01T00:00:00Z",
              "used": Object {
                "unit": "",
                "value": 0,
              },
            },
            "compute_nodes_memory": Object {
              "total": Object {
                "unit": "B",
                "value": 98489344000,
              },
              "updated_timestamp": "1970-01-01T00:00:00Z",
              "used": Object {
                "unit": "B",
                "value": 0,
              },
            },
            "compute_nodes_sockets": Object {
              "total": Object {
                "unit": "",
                "value": 0,
              },
              "updated_timestamp": "1970-01-01T00:00:00Z",
              "used": Object {
                "unit": "",
                "value": 0,
              },
            },
            "console_url": "https://console-openshift-console.apps.test-liza.wiex.s1.devshift.org",
            "cpu": Object {
              "total": Object {
                "unit": "",
                "value": 36,
              },
              "updated_timestamp": "2021-01-11T11:55:10.517Z",
              "used": Object {
                "unit": "",
                "value": 3.8904761904758463,
              },
            },
            "critical_alerts_firing": 0,
            "memory": Object {
              "total": Object {
                "unit": "B",
                "value": 147469647872,
              },
              "updated_timestamp": "2021-01-11T11:55:10.448Z",
              "used": Object {
                "unit": "B",
                "value": 28802600960,
              },
            },
            "nodes": Object {
              "compute": 4,
              "infra": 2,
              "master": 3,
              "total": 9,
            },
            "open_shift_version": "4.6.8",
            "operating_system": "",
            "operators_condition_failing": 0,
            "region": "us-east-1",
            "sockets": Object {
              "total": Object {
                "unit": "",
                "value": 0,
              },
              "updated_timestamp": "1970-01-01T00:00:00Z",
              "used": Object {
                "unit": "",
                "value": 0,
              },
            },
            "state": "ready",
            "state_description": "",
            "storage": Object {
              "total": Object {
                "unit": "B",
                "value": 0,
              },
              "updated_timestamp": "1970-01-01T00:00:00Z",
              "used": Object {
                "unit": "B",
                "value": 0,
              },
            },
            "subscription_cpu_total": 8,
            "subscription_socket_total": 4,
            "upgrade": Object {
              "updated_timestamp": "2021-01-11T11:55:10.206Z",
            },
          },
        ],
        "organization_id": "1MKVU4otCIuogoLtgtyU6wajxjW",
        "plan": Object {
          "href": "/api/accounts_mgmt/v1/plans/OSD",
          "id": "OSD",
          "kind": "Plan",
        },
        "provenance": "Provisioning",
        "region_id": "us-east-1",
        "socket_total": 4,
        "status": "Active",
        "support_level": "Premium",
        "updated_at": "2021-01-11T03:59:48.224622Z",
      },
      "upgrade_channel_group": "stable",
      "version": Object {
        "channel_group": "stable",
        "href": "/api/clusters_mgmt/v1/versions/openshift-v4.6.8",
        "id": "openshift-v4.6.8",
        "kind": "Version",
      },
    }
  }
  disabled={false}
  getPersistentStorage={[MockFunction]}
  input={
    Object {
      "onChange": [MockFunction],
    }
  }
  persistentStorageValues={
    Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "pending": false,
      "values": Array [
        Object {
          "unit": "B",
          "value": 107374182400,
        },
        Object {
          "unit": "B",
          "value": 644245094400,
        },
        Object {
          "unit": "B",
          "value": 1181116006400,
        },
      ],
    }
  }
  quotaList={
    Object {
      "storageQuota": Object {
        "standard": Object {
          "OSD": Object {
            "aws": Object {
              "rhInfra": Object {
                "singleAZ": Object {
                  "gp2": 27000,
                },
              },
            },
          },
        },
      },
    }
  }
>
  <FormSelect
    aria-label="Persistent Storage"
    className="quota-dropdown"
    isDisabled={false}
    isRequired={false}
    onBlur={[Function]}
    onChange={[MockFunction]}
    onFocus={[Function]}
    ouiaSafe={true}
    validated="default"
    value=""
  >
    <select
      aria-invalid={false}
      aria-label="Persistent Storage"
      className="pf-c-form-control quota-dropdown"
      data-ouia-component-id="OUIA-Generated-FormSelect-default-1"
      data-ouia-component-type="PF4/FormSelect"
      data-ouia-safe={true}
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      value=""
    >
      <FormSelectOption
        key="107374182400"
        label="100 GiB"
        value="107374182400"
      >
        <option
          className=""
          disabled={false}
          value="107374182400"
        >
          100 GiB
        </option>
      </FormSelectOption>
      <FormSelectOption
        key="644245094400"
        label="600 GiB"
        value="644245094400"
      >
        <option
          className=""
          disabled={false}
          value="644245094400"
        >
          600 GiB
        </option>
      </FormSelectOption>
      <FormSelectOption
        key="1181116006400"
        label="1100 GiB"
        value="1181116006400"
      >
        <option
          className=""
          disabled={false}
          value="1181116006400"
        >
          1100 GiB
        </option>
      </FormSelectOption>
    </select>
  </FormSelect>
</PersistentStorageDropdown>
`;

exports[`<PersistentStorageDropdown /> when there was an error renders correctly 1`] = `
<PersistentStorageDropdown
  cluster={
    Object {
      "activity_timestamp": "2021-01-11T11:55:29Z",
      "addons": Object {
        "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/addons",
        "kind": "AddOnInstallationListLink",
      },
      "api": Object {
        "listening": "external",
        "url": "https://api.test-liza.wiex.s1.devshift.org:6443",
      },
      "aws_infrastructure_access_role_grants": Object {
        "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/aws_infrastructure_access_role_grants",
        "items": null,
        "kind": "AWSInfrastructureAccessRoleGrantLink",
      },
      "byoc": false,
      "ccs": Object {
        "disable_scp_checks": false,
        "enabled": false,
      },
      "cloud_provider": Object {
        "href": "/api/clusters_mgmt/v1/cloud_providers/aws",
        "id": "aws",
        "kind": "CloudProviderLink",
      },
      "console": Object {
        "url": "https://console-openshift-console.apps.test-liza.wiex.s1.devshift.org",
      },
      "creation_timestamp": "2021-01-10T15:17:16.278663Z",
      "display_name": "test-liza",
      "dns": Object {
        "base_domain": "wiex.s1.devshift.org",
      },
      "etcd_encryption": false,
      "expiration_timestamp": "2021-01-12T03:17:14.999204Z",
      "external_configuration": Object {
        "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/external_configuration",
        "kind": "ExternalConfiguration",
        "labels": Object {
          "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/external_configuration/labels",
          "kind": "LabelListLink",
        },
        "syncsets": Object {
          "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/external_configuration/syncsets",
          "kind": "SyncsetListLink",
        },
      },
      "external_id": "bae5b227-2472-4e71-be4d-a18fc60bb48a",
      "flavour": Object {
        "href": "/api/clusters_mgmt/v1/flavours/osd-4",
        "id": "osd-4",
        "kind": "FlavourLink",
      },
      "groups": Object {
        "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/groups",
        "kind": "GroupListLink",
      },
      "health_state": "healthy",
      "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq",
      "id": "1i4counta3holamvo1g5tp6n8p3a03bq",
      "identity_providers": Object {
        "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/identity_providers",
        "kind": "IdentityProviderListLink",
      },
      "infra_id": "test-liza-d7vkd",
      "ingresses": Object {
        "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/ingresses",
        "id": "1i4counta3holamvo1g5tp6n8p3a03bq",
        "kind": "IngressListLink",
      },
      "kind": "Cluster",
      "load_balancer_quota": 0,
      "machine_pools": Object {
        "href": "/api/clusters_mgmt/v1/clusters/1i4counta3holamvo1g5tp6n8p3a03bq/machine_pools",
        "kind": "MachinePoolListLink",
      },
      "managed": true,
      "metrics": Object {
        "compute_nodes_cpu": Object {
          "total": Object {
            "unit": "",
            "value": 16,
          },
        },
        "compute_nodes_memory": Object {
          "total": Object {
            "unit": "B",
            "value": 65835802624,
          },
        },
        "compute_nodes_sockets": Object {
          "total": Object {
            "unit": "",
            "value": 0,
          },
        },
        "cpu": Object {
          "total": Object {
            "unit": "",
            "value": 36,
          },
          "updated_timestamp": "2021-01-11T11:55:29Z",
          "used": Object {
            "unit": "",
            "value": 3.8904761904758463,
          },
        },
        "memory": Object {
          "total": Object {
            "unit": "B",
            "value": 147469647872,
          },
          "updated_timestamp": "2021-01-11T11:55:29Z",
          "used": Object {
            "unit": "B",
            "value": 28802600960,
          },
        },
        "nodes": Object {
          "compute": 4,
          "infra": 2,
          "master": 3,
          "total": 9,
        },
        "sockets": Object {
          "total": Object {
            "unit": "",
            "value": 0,
          },
          "used": Object {
            "unit": "",
            "value": 0,
          },
        },
        "storage": Object {
          "total": Object {
            "unit": "B",
            "value": 0,
          },
          "used": Object {
            "unit": "B",
            "value": 0,
          },
        },
        "upgrade": Object {
          "available": false,
          "updated_timestamp": "2021-01-11T11:55:29Z",
        },
        "version_update_available": false,
      },
      "multi_az": false,
      "name": "test-liza",
      "network": Object {
        "host_prefix": 23,
        "machine_cidr": "10.0.0.0/16",
        "pod_cidr": "10.128.0.0/14",
        "service_cidr": "172.30.0.0/16",
      },
      "node_drain_grace_period": Object {
        "unit": "minutes",
        "value": 60,
      },
      "nodes": Object {
        "availability_zones": Array [
          "us-east-1a",
        ],
        "compute": 4,
        "compute_machine_type": Object {
          "href": "/api/clusters_mgmt/v1/machine_types/m5.xlarge",
          "id": "m5.xlarge",
          "kind": "MachineTypeLink",
        },
        "infra": 2,
        "master": 3,
        "master_machine_type": Object {
          "href": "/api/clusters_mgmt/v1/machine_types/m5.xlarge",
          "id": "m5.xlarge",
          "kind": "MachineTypeLink",
        },
      },
      "openshift_version": "4.6.8",
      "product": Object {
        "id": "OSD",
      },
      "region": Object {
        "href": "/api/clusters_mgmt/v1/cloud_providers/aws/regions/us-east-1",
        "id": "us-east-1",
        "kind": "CloudRegionLink",
      },
      "state": "ready",
      "status": Object {
        "dns_ready": true,
        "provision_error_code": "",
        "provision_error_message": "",
        "state": "ready",
      },
      "storage_quota": Object {
        "unit": "B",
        "value": 107374182400,
      },
      "subscription": Object {
        "capabilities": Array [
          Object {
            "inherited": true,
            "name": "capability.cluster.subscribed_ocp",
            "value": "true",
          },
          Object {
            "inherited": true,
            "name": "capability.cluster.manage_cluster_admin",
            "value": "true",
          },
        ],
        "cloud_provider_id": "aws",
        "cluster_id": "1i4counta3holamvo1g5tp6n8p3a03bq",
        "console_url": "https://console-openshift-console.apps.test-liza.wiex.s1.devshift.org",
        "cpu_total": 8,
        "created_at": "2021-01-10T15:17:15.19112Z",
        "creator": Object {
          "email": "***REMOVED***",
          "href": "/api/accounts_mgmt/v1/accounts/1MRilA9vHlOUX9ui3lx6IohSsaS",
          "id": "1MRilA9vHlOUX9ui3lx6IohSsaS",
          "kind": "Account",
          "name": "Liza Gilman",
          "username": "egilman.openshift",
        },
        "display_name": "test-liza",
        "external_cluster_id": "bae5b227-2472-4e71-be4d-a18fc60bb48a",
        "href": "/api/accounts_mgmt/v1/subscriptions/1msoogsgTLQ4PePjrTOt3UqvMzX",
        "id": "1msoogsgTLQ4PePjrTOt3UqvMzX",
        "kind": "Subscription",
        "last_reconcile_date": "0001-01-01T00:00:00Z",
        "last_released_at": "0001-01-01T00:00:00Z",
        "last_telemetry_date": "2021-01-11T03:59:48.224585Z",
        "managed": true,
        "metrics": Array [
          Object {
            "HealthState": "healthy",
            "cloud_provider": "aws",
            "compute_nodes_cpu": Object {
              "total": Object {
                "unit": "",
                "value": 24,
              },
              "updated_timestamp": "1970-01-01T00:00:00Z",
              "used": Object {
                "unit": "",
                "value": 0,
              },
            },
            "compute_nodes_memory": Object {
              "total": Object {
                "unit": "B",
                "value": 98489344000,
              },
              "updated_timestamp": "1970-01-01T00:00:00Z",
              "used": Object {
                "unit": "B",
                "value": 0,
              },
            },
            "compute_nodes_sockets": Object {
              "total": Object {
                "unit": "",
                "value": 0,
              },
              "updated_timestamp": "1970-01-01T00:00:00Z",
              "used": Object {
                "unit": "",
                "value": 0,
              },
            },
            "console_url": "https://console-openshift-console.apps.test-liza.wiex.s1.devshift.org",
            "cpu": Object {
              "total": Object {
                "unit": "",
                "value": 36,
              },
              "updated_timestamp": "2021-01-11T11:55:10.517Z",
              "used": Object {
                "unit": "",
                "value": 3.8904761904758463,
              },
            },
            "critical_alerts_firing": 0,
            "memory": Object {
              "total": Object {
                "unit": "B",
                "value": 147469647872,
              },
              "updated_timestamp": "2021-01-11T11:55:10.448Z",
              "used": Object {
                "unit": "B",
                "value": 28802600960,
              },
            },
            "nodes": Object {
              "compute": 4,
              "infra": 2,
              "master": 3,
              "total": 9,
            },
            "open_shift_version": "4.6.8",
            "operating_system": "",
            "operators_condition_failing": 0,
            "region": "us-east-1",
            "sockets": Object {
              "total": Object {
                "unit": "",
                "value": 0,
              },
              "updated_timestamp": "1970-01-01T00:00:00Z",
              "used": Object {
                "unit": "",
                "value": 0,
              },
            },
            "state": "ready",
            "state_description": "",
            "storage": Object {
              "total": Object {
                "unit": "B",
                "value": 0,
              },
              "updated_timestamp": "1970-01-01T00:00:00Z",
              "used": Object {
                "unit": "B",
                "value": 0,
              },
            },
            "subscription_cpu_total": 8,
            "subscription_socket_total": 4,
            "upgrade": Object {
              "updated_timestamp": "2021-01-11T11:55:10.206Z",
            },
          },
        ],
        "organization_id": "1MKVU4otCIuogoLtgtyU6wajxjW",
        "plan": Object {
          "href": "/api/accounts_mgmt/v1/plans/OSD",
          "id": "OSD",
          "kind": "Plan",
        },
        "provenance": "Provisioning",
        "region_id": "us-east-1",
        "socket_total": 4,
        "status": "Active",
        "support_level": "Premium",
        "updated_at": "2021-01-11T03:59:48.224622Z",
      },
      "upgrade_channel_group": "stable",
      "version": Object {
        "channel_group": "stable",
        "href": "/api/clusters_mgmt/v1/versions/openshift-v4.6.8",
        "id": "openshift-v4.6.8",
        "kind": "Version",
      },
    }
  }
  disabled={false}
  getPersistentStorage={[MockFunction]}
  input={
    Object {
      "onChange": [MockFunction],
    }
  }
  persistentStorageValues={
    Object {
      "error": true,
      "errorMessage": "This is an error message",
      "fulfilled": false,
      "pending": false,
    }
  }
  quotaList={
    Object {
      "storageQuota": Object {
        "standard": Object {
          "OSD": Object {
            "aws": Object {
              "rhInfra": Object {
                "singleAZ": Object {
                  "gp2": 27000,
                },
              },
            },
          },
        },
      },
    }
  }
>
  <ErrorBox
    message="Error loading persistent storage list"
    response={
      Object {
        "error": true,
        "errorMessage": "This is an error message",
        "fulfilled": false,
        "pending": false,
      }
    }
  >
    <Alert
      className="error-box"
      isInline={true}
      title="Error loading persistent storage list"
      variant="danger"
    >
      <div
        aria-label="Danger Alert"
        className="pf-c-alert pf-m-inline pf-m-danger error-box"
        data-ouia-component-id="OUIA-Generated-Alert-danger-1"
        data-ouia-component-type="PF4/Alert"
        data-ouia-safe={true}
      >
        <Component
          variant="danger"
        >
          <div
            className="pf-c-alert__icon"
          >
            <ExclamationCircleIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                />
              </svg>
            </ExclamationCircleIcon>
          </div>
        </Component>
        <h4
          className="pf-c-alert__title"
        >
          <span
            className="pf-u-screen-reader"
          >
            Danger alert:
          </span>
          Error loading persistent storage list
        </h4>
        <div
          className="pf-c-alert__description"
        >
          <span>
            This is an error message
          </span>
          <br />
          <span>
            Operation ID: N/A
          </span>
        </div>
      </div>
    </Alert>
  </ErrorBox>
</PersistentStorageDropdown>
`;
